Restored the fixed menu (so now it's always visible

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -480,6 +480,8 @@ ul.social-buttons li a:active {
 	#min-height:400px;
 	position:relative;
 	
+	margin-top:70px;
+	
 	
 	text-align: center;
 	background-image: url("/images/header_objects_trasp.png");
@@ -575,7 +577,7 @@ ul.social-buttons li a:active {
 	}
 }
 .header-menu {
-	#position: fixed;
+	position: fixed;
   top: 0;
   left: 0;
   width: 100%;
